# hackathon_phase_2_Cli_Todo

./: .gitignore  README.md  pyproject.toml  pytest.ini
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
backend/: .env  check_table.py  config.py  database.py  logging_config.py  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0afd6c7ba00e_create_tasks_table.py  67589f659adb_create_tasks_table.py  8e5c1a2b3d4f_create_chat_tables.py
backend/api/: auth.py  chat.py  tasks.py
backend/cli/: commands.py  error_handler.py
backend/middleware/: auth.py
backend/models/: __init__.py  chat.py  task.py
backend/services/: chat_repository.py  chat_service.py  task_repository.py  task_service.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/public/: Img.avif
frontend/src/app/: layout.tsx  (+1 more)
specs/1-ai-chat-service/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-frontend-todo-phase2/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-task-backend/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-todo-cli-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
tests/functional/: test_e2e.py
tests/integration/: test_api_chat.py  test_api_tasks.py  test_cli_add_task.py  test_cli_delete_task.py  test_cli_toggle_completion.py  test_cli_update_task.py  test_cli_view_tasks.py
tests/unit/: test_task_model.py  test_task_service.py
(+49 files in other folders)
